--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,18 @@
 @font-face {
   font-family: "gilroyextrabold";
   src: local("Gilroyextrabold"),
+  url("../fonts/gilroyextrabold.woff2") format("woff2"),
   url("../fonts/gilroyextrabold.woff") format("woff");
 }
 
 @font-face {
   font-family: "opensans";
   src: local("opensans"),
+  url("../fonts/opensans.woff2") format("woff2"),
   url("../fonts/opensans.woff") format("woff");
 }
 
 body {
-/*    font-family: "Gilroy", sans-serif;*/
-/*      font-family: "Open sans", sans-serif;*/
+  /*    font-family: "Gilroy", sans-serif;*/
+  /*    font-family: "Open sans", sans-serif;*/
 }
