--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/*font-family: "Gilroy", sans-serif;*/
+/*font-family: "Open sans", sans-serif;*/
+
 @font-face {
   font-family: "gilroyextrabold";
   src: local("Gilroyextrabold"),
@@ -12,7 +15,15 @@
   url("../fonts/opensans.woff") format("woff");
 }
 
-body {
-  /*    font-family: "Gilroy", sans-serif;*/
-  /*    font-family: "Open sans", sans-serif;*/
+/*
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
+*/
