--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,16 @@
-/*font-family: "Gilroy", sans-serif;*/
-/*font-family: "Open sans", sans-serif;*/
+/*font-family: "Gilroy", "Arial", sans-serif;*/
+/*font-family: "Open sans", "Arial", sans-serif;*/
+
+/*font: [font-style||font-variant||font-weight] font-size [/line-height] font-family | inherit*/
+
+/*
+1. Позиционирование
+2. Блочная модель
+3. Типографика
+4. Оформление
+5. Анимация
+6. Разное
+*/
 
 @font-face {
   font-family: "gilroyextrabold";
@@ -15,15 +26,750 @@
   url("../fonts/opensans.woff") format("woff");
 }
 
-/*
+body {
+  width: 1440px;
+  margin: 10px auto;
+
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 30px;
+  font-family: "Open sans", "Arial", sans-serif;
+  letter-spacing: 0.01em;
+  color: #000;
+
+  background-color: #fff;
+
+  outline: 1px solid black;
+}
+
+.container1200 {
+  width: 1200px;
+  margin: auto;
+  padding: 0 20px;
+
+  outline: 1px solid red;
+}
+
+.container1040 {
+  width: 1040px;
+  margin: auto;
+
+  outline: 1px solid red;
+}
+
 .visually-hidden {
   position: absolute;
+
   width: 1px;
   height: 1px;
   margin: -1px;
-  border: 0;
   padding: 0;
-  clip: rect(0 0 0 0);
+
+  border: 0;
   overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+
+ul[class$="-list"] {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+li[class$="-item"] a {
+  color: #000;
+  text-decoration: none;
+}
+
+/****************************************************************8*/
+
+.main-header .container1200 {
+  padding-bottom: 165px;
+  background-image: linear-gradient(to bottom, #ffffff 25px, #f7e296 25px)
+}
+
+
+.main-header .container1040 {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main-header .logo-container {
+  flex-basis: 100%;
+  margin-bottom: 30px;
+}
+
+.main-header .logo {
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 48px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  letter-spacing: 0.01em;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+}
+
+.form-container {
+  width: 440px;
+  margin-right: 100px;
+
+  outline: 1px solid blue;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+}
+
+input[type="search"] {
+  flex-grow: 1;
+}
+
+.main-header .user-menu {
+  width: 500px;
+
+  outline: 1px solid blue;
+}
+
+.main-header .user-menu-list {
+  display: flex;
+}
+
+.main-header .user-menu-item {
+  margin: 0 auto;
+
+  outline: 1px solid blue;
+}
+
+.main-header .user-menu-item:first-child {
+  margin: 0;
+  padding-left: 28px;
+}
+
+.main-header .user-menu-item:nth-child(2) {
+  margin-left: 20px;
+}
+
+.main-header .user-menu-item:nth-child(3) {
+  padding-left: 23px;
+}
+
+.main-header .user-menu-item:last-child {
+  margin-right: 0;
+  padding-left: 25px;
+}
+
+.main-header .main-menu {
+  width: 100%;
+  margin-top: 50px;
+}
+
+.main-header .main-menu-list {
+  display: flex;
+}
+
+.main-header .main-menu-item {
+  margin: 0 auto;
+}
+
+.main-header .main-menu-item:first-child {
+  position: relative;
+
+  margin-left: 0;
+}
+
+.main-header .main-menu-item:nth-child(2) {
+  margin-right: 0;
+}
+
+.main-header .main-menu-item:nth-child(3) {
+  margin-left: 35px;
+  margin-right: 100px;
+}
+
+.main-header .main-menu-item:last-child {
+  margin: 0;
+}
+
+.main-header .main-menu-item a {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+}
+
+.main-menu-item:first-child:hover .sub-menu-list,
+.main-menu-item:first-child:active .sub-menu-list {
+  display: flex;
+}
+
+header .sub-menu-list {
+  position: absolute;
+  top: 30px;
+  z-index: 1;
+
+  display: none;
+  width: 1040px;
+  padding-top: 20px;
+
+  background-color: #f7e296;
+
+  outline: 1px solid green;
+}
+
+.sub-menu-item {
+  width: 160px;
+  margin-right: 40px;
+}
+
+.sub-menu-item:first-child {
+  width: 200px;
+}
+
+.sub-menu-item:last-child {
+  margin-right: 0;
+}
+
+.main-header .sub-menu-list a {
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 36px;
+  font-family: "Open sans", "Arial", sans-serif;
+  letter-spacing: 0.01em;
+  text-transform: capitalize;
+}
+
+/*****************************************************************/
+
+.promo {
+  position: relative;
+  top: -115px;
+
+  /*  margin-top: -115px;*/
+}
+
+.promo .container1200 {
+  position: relative;
+
+  outline: 1px solid green;
+}
+
+.promo .promo-item {
+  display: none;
+}
+
+#promo-slide1:checked ~ .promo-list .promo-item:nth-child(1),
+#promo-slide2:checked ~ .promo-list .promo-item:nth-child(2),
+#promo-slide3:checked ~ .promo-list .promo-item:nth-child(3) {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+}
+
+.promo-item .column {
+  min-height: 486px;
+
+  outline: 1px solid blue;
+}
+
+.promo-item .column:first-child {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  width: 500px;
+}
+
+.promo-item-title {
+  position: absolute;
+  right: 0;
+  top: -10px;
+  z-index: -1;
+
+  margin: 0;
+
+  font-weight: 800;
+  font-size: 180px;
+  line-height: 180px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  letter-spacing: 0.01em;
+  /*  color: #fff;*/
+}
+
+.section-title {
+  margin: 0;
+
+  font-weight: 800;
+  font-size: 47px;
+  line-height: 48px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  letter-spacing: 0.01em;
+}
+
+.promo .section-title {
+  line-height: 56px;
+}
+
+.section-title::before {
+  display: block;
+  width: 100px;
+  height: 7px;
+  margin-bottom: 46px;
+
+  background-color: #000;
+
+  content: "";
+}
+
+.promo .section-title::before {
+  background-color: #fff;
+}
+
+.promo .content {
+  margin: 0;
+  margin-top: 30px;
+  font: inherit;
+  color: #464646;
+}
+
+.promo .btn {
+  display: inline-block;
+  margin-top: 60px;
+  padding: 0 44px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 800;
+  font-family: "Gilroy", "Arial", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  vertical-align: middle;
+  background-color: #f0c52e;
+
+  outline: 1px solid red;
+}
+
+.characteristics-of-goods {
+  width: 460px;
+  margin-top: 65px;
+  margin-bottom: 15px;
+
+  /*  outline: 1px solid red;*/
+}
+
+.characteristics-of-goods .value {
+  font-size: 36px;
+  line-height: 48px;
+  font-weight: 300;
+  font-family: "Gilroy", "Arial", sans-serif;
+  color: #000;
+  letter-spacing: 0.01em;
+}
+
+.characteristics-of-goods .characteristic {
+  font-size: 13px;
+  line-height: 20px;
+  letter-spacing: 0.01em;
+  color: #464646;
+}
+
+.characteristics-of-goods td {
+  width: 160px;
+
+  outline: 1px solid blue;
+}
+
+.characteristics-of-goods .col-2 {
+  width: 140px;
+}
+
+.promo-item .column:last-child {
+  display: flex;
+  width: 580px;
+}
+
+.promo-item .column:last-child img {
+  margin: auto;
+  margin-top: 0;
+}
+
+.promo-active {
+  position: absolute;
+  bottom: 142px;
+  right: 100px;
+}
+
+.promo-active label {
+  position: relative;
+
+  display: inline-block;
+  width: 11px;
+  height: 11px;
+  margin: 0;
+  margin-right: 15px;
+
+  font-size: 0;
+
+  border: 1px solid #464646;
+  border-radius: 50%;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+#promo-slide1:checked ~ .promo-active label:nth-child(1)::after,
+#promo-slide2:checked ~ .promo-active label:nth-child(2)::after,
+#promo-slide3:checked ~ .promo-active label:nth-child(3)::after {
+  position: absolute;
+  top: 3px;
+  left: 3px;
+
+  width: 3px;
+  height: 3px;
+
+  border: 1px solid #464646;
+  border-radius: 50%;
+
+  content: "";
+}
+
+/****************************************************************************/
+
+.popular-product {
+  margin-top: 115px;
+  padding-bottom: 80px;
+
+  outline: 1px solid green;
+}
+
+.popular-product-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.popular-product-item {
+  position: relative;
+
+  width: 160px;
+
+  outline: 1px solid blue;
+}
+
+.popular-product-title {
+  margin: 0;
+  /*  margin-top: 35px;*/
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", sans-serif;
+}
+
+/*
+.popular-product-item::before {
+  content: "";
+  display: block;
+  width: 160px;
+  height: 160px;
+  background-color: #f7e296;
+
+  outline: 1px solid #000;
 }
 */
+
+/*
+.popular-product-item::after {
+  content: "";
+  display: block;
+  position: absolute;
+}
+
+.popular-product-item:nth-child(1)::after {
+  top: 53px;
+  left: 25%;
+  width: 97px;
+  height: 55px;
+  background: url(../img/popular-1.svg) no-repeat center;
+}
+
+.popular-product-item:nth-child(2)::after {
+  width: 86px;
+  height: 117px;
+  background: url(../img/popular-2.svg) no-repeat center;
+}
+
+.popular-product-item:nth-child(3)::after {
+  width: 71px;
+  height: 87px;
+  background: url(../img/popular-3.svg) no-repeat center;
+}
+
+.popular-product-item:nth-child(4)::after {
+  width: 107px;
+  height: 65px;
+  background: url(../img/popular-4.svg) no-repeat center;
+}
+
+.popular-product-item:nth-child(5)::after {
+  width: 56px;
+  height: 98px;
+  background: url(../img/popular-5.svg) no-repeat center;
+}
+
+.popular-product-item:nth-child(6)::after {
+  width: 132px;
+  height: 69px;
+  background: url(../img/popular-6.svg) no-repeat center;
+}
+*/
+
+.popular-product-image {
+  position: absolute;
+  bottom: 85px;
+  left: 0px;
+
+  width: 160px;
+  height: 160px;
+
+  background: #f7e296 no-repeat center;
+
+  outline: 1px solid blue;
+}
+
+.popular-product-item:nth-child(1) .popular-product-image {
+  background-image: url("../img/popular-1.svg");
+}
+
+.popular-product-item:nth-child(2) .popular-product-image {
+  background-image: url("../img/popular-2.svg");
+  background-position: bottom;
+}
+
+.popular-product-item:nth-child(3) .popular-product-image {
+  background-image: url("../img/popular-3.svg");
+}
+
+.popular-product-item:nth-child(4) .popular-product-image {
+  background-image: url("../img/popular-4.svg");
+}
+
+.popular-product-item:nth-child(5) .popular-product-image {
+  background-image: url("../img/popular-5.svg");
+}
+
+.popular-product-item:nth-child(6) .popular-product-image {
+  background-image: url("../img/popular-6.svg");
+}
+
+/************************************************************************/
+
+.services {
+  padding-bottom: 70px;
+
+  background-image: linear-gradient(to bottom, #fff 100px, #e5e5e5 100px);
+
+  outline: 1px solid #000;
+}
+
+.services-slider {
+  display: flex;  
+}
+
+#services-slide1:checked ~ .services-list .services-item:nth-child(1),
+#services-slide2:checked ~ .services-list .services-item:nth-child(2),
+#services-slide3:checked ~ .services-list .services-item:nth-child(3) {
+  display: block;
+}
+
+.services-active {
+  display: flex;
+  flex-direction: column;
+  width: 295px;
+  margin-right: 115px;
+  padding: 60px 0;
+
+  border-right: 7px solid #000;
+
+  outline: 1px solid blue;
+}
+
+.services-active p {
+  margin-bottom: 25px;
+  
+  outline: 1px solid red;
+}
+
+.services-active p:last-child {
+  margin-bottom: 0;
+}
+
+.services-active label {
+  display: inline-block;
+  width: 160px;
+/*  margin-right: 117px;*/
+  
+  padding: 13px 0;
+
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  text-align: center;
+
+  outline: 1px solid green;
+}
+
+#services-slide1:checked ~ .services-active p:nth-child(1),
+#services-slide2:checked ~ .services-active p:nth-child(2),
+#services-slide3:checked ~ .services-active p:nth-child(3) {
+  color: #f7e184;
+  
+  background-color: #000;
+}
+
+.services-item {
+  position: relative;
+
+  display: none;
+  width: 440px;
+
+  outline: 1px solid green;
+}
+
+.services-item::after {
+  position: absolute;
+
+  display: block;
+
+  content: "";
+}
+
+.services-item:nth-child(1)::after {
+  bottom: 0px;
+  right: -250px;
+
+  width: 136px;
+  height: 164px;
+
+  background-image: url("../img/delivery.svg");
+}
+
+.services-item:nth-child(2)::after {
+  bottom: 0px;
+  right: -250px;
+
+  width: 171px;
+  height: 195px;
+
+  background-image: url("../img/warranty.svg");
+}
+
+.services-item:nth-child(3)::after {
+  bottom: 0px;
+  right: -250px;
+
+  width: 156px;
+  height: 188px;
+
+  background-image: url("../img/credit.svg");
+}
+
+
+.services .section-title {
+  margin-bottom: 40px;
+
+  outline: 1px solid blue;
+}
+
+.services .section-title::before {
+  margin-bottom: 65px;
+
+  background-color: #fff;
+}
+
+/*******************************************************************************/
+
+
+.our-partner {
+  padding: 105px 0;
+}
+
+.our-partner .container1200 {
+  
+}
+
+.our-partner-list {
+  display: flex;
+  justify-content: space-around;  
+}
+
+.our-partner-item {
+  outline: 1px solid blue;
+}
+
+.our-partner-item a {
+  display: block;
+  width: 260px;
+  height: 100px;  
+}
+
+.our-partner-item:nth-child(1) a {
+  background-image: url("../img/logo-partner-1.png");
+}
+
+.our-partner-item:nth-child(1) a:hover {
+  background-image: url("../img/logo-partner-1-hover.png");
+}
+
+.our-partner-item:nth-child(2) a {
+  background-image: url("../img/logo-partner-2.png");
+}
+
+.our-partner-item:nth-child(2) a:hover {
+  background-image: url("../img/logo-partner-2-hover.png");
+}
+
+.our-partner-item:nth-child(3) a {
+  background-image: url("../img/logo-partner-3.png");
+}
+
+.our-partner-item:nth-child(3) a:hover {
+  background-image: url("../img/logo-partner-3-hover.png");
+}
+
+.our-partner-item:nth-child(4) a {
+  background-image: url("../img/logo-partner-4.png");
+}
+
+.our-partner-item:nth-child(4) a:hover {
+  background-image: url("../img/logo-partner-4-hover.png");
+}
+
+/*********************************************************************************************/
+
+/*
+.wrapper1200 {
+  display: flex;
+  
+  outline: 1px solid red;
+}
+*/
+
+
+
+
+
+
+
+
+
+
+
+
+
