--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,35 @@
 6. Разное
 */
 
+/*
+   Типографика 
+  font: normal 13px/1.5 "Arial", sans-serif;
+  font-style: normal;
+  font-size: 13px;
+  line-height: 1.5;
+  font-family: "Arial", sans-serif;
+  text-align: center;
+  color: #333333;
+*/
+
+/*
+   Оформление 
+  background-color: #f5f5f5;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
+  opacity: 1;
+*/
+
+/*
+   Анимация 
+  transition: color 1s;
+*/
+
+/*
+   Разное 
+  will-change: auto;
+*/
+
 @font-face {
   font-family: "gilroyextrabold";
   src: local("Gilroyextrabold"),
@@ -39,14 +68,12 @@ body {
   color: #000;
 
   background-color: #fff;
-
   outline: 1px solid black;
 }
 
 .container {
-  width: 1200px;
+  width: 1160px;
   margin: 0 auto;
-  padding: 0 20px;
 
   outline: 1px solid red;
 }
@@ -107,24 +134,49 @@ body {
   color: #000;
 }
 
+.link:hover,
+.link-user-menu:hover {
+  opacity: 0.6;
+}
+
+.link:active,
+.link-user-menu:active {
+  opacity: 0.3;
+}
+
 .btn {
   display: inline-block;
+  width: 220px;
+  padding: 8px 0;
 
-  vertical-align: middle;
+  text-align: center;
 
+  background-image: linear-gradient(to bottom, transparent 16px, #f0c52e 16px, #f0c52e 24px, transparent 24px);
   border: none;
-  background-color: #f0c52e;
+  outline: none;
+}
 
-  outline: 1px solid red;
+.btn:hover {
+  background-color: #f0c52e;
+  background-image: none;
+  opacity: 1;
+}
+
+.btn:active {
+  color: rgba(0, 0, 0, 0.3);
+
+  background-color: #f0c52e;
+  background-image: none;
+  opacity: 1;
 }
 
 /*****************************************************************/
 
 .main-header .container {
-  padding-top: 10px;
-  padding-bottom: 55px;
-
-  background-image: linear-gradient(to bottom, #ffffff 25px, #f7e296 25px);
+  padding-top: 35px;
+  padding-bottom: 50px;
+  /*  по странице каталога=55px~50px от низа главн. меню до бежево-белой границы*/
+  background-image: linear-gradient(to bottom, #fff 59px, #f7e296 59px);
 }
 
 .header-container {
@@ -134,7 +186,8 @@ body {
 
 .logo-container {
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
+  /*  50-24-17=9~10px 50-расст. от бело-бежевой границы до меню 24-половина высоты строки логотипа 17-верхняя высота поля поиска*/
 }
 
 .logo {
@@ -146,11 +199,22 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   color: #000;
+
+  cursor: pointer;
+}
+
+.logo:hover {
+  opacity: 0.6;
+}
+
+.logo:active {
+  opacity: 0.3;
 }
 
 .header-wrapper {
   display: flex;
-  margin-bottom: 50px;
+  align-items: baseline;
+  margin-bottom: 45px;
 }
 
 .search-form {
@@ -162,6 +226,74 @@ body {
 
 input[type="search"] {
   flex-grow: 1;
+  padding: 17px 20px;
+  padding-left: 40px;
+
+  font: inherit;
+  line-height: 17px;
+  letter-spacing: 0.01em;
+  color: #000;
+
+  background-color: #f7e296;
+  border: none;
+  outline: none;
+  opacity: 0.3;
+}
+
+input[type="search"]:hover {
+  opacity: 0.6;
+}
+
+input[type="search"]:focus {
+  padding-bottom: 15px;
+
+  opacity: 1;
+  border-bottom: 2px solid #000;
+}
+
+.btn-search {
+  padding: 15px 20px;
+
+  font: inherit;
+  line-height: 15px;
+  color: #f7e296;
+
+  background-color: #f7e296;
+  border: 2px solid #f7e296;
+
+  cursor: pointer;
+}
+
+.btn-search:hover {
+  /*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!importan!!!!!!!!!!!!!!!!!!!!!!*/
+  color: rgba(255, 255, 255, 1) !important;
+  /*!!!!!!!!!!!!!!!!!!!!!!importan!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+  background-color: #000;
+}
+
+.btn-search:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+/*
+????????????????????????????????при фокусе  табом по кнопке  она должна отображаться???????????????
+.btn-search:focus {  
+  color: #000;
+
+  border-color: #000;
+}
+*/
+
+input[type="search"]:focus + .btn-search {
+  color: #000;
+
+  border-color: #000;
+}
+
+.btn-search:focus {
+  color: #000;
+
+  border-color: #000;
 }
 
 .user-menu-list {
@@ -225,12 +357,15 @@ input[type="search"] {
 
 .sub-menu-list {
   position: absolute;
-  top: 30px;
-  z-index: 1;
+  top: 35px;
+  left: -60px;
+  z-index: 2;
 
   display: none;
-  width: 1040px;
+
+  width: 1100px;
   padding-top: 20px;
+  padding-left: 60px;
 
   background-color: #f7e296;
 }
@@ -248,16 +383,28 @@ input[type="search"] {
   margin-right: 0;
 }
 
-.sub-menu-list a {
+.sub-menu-item ul li {
+  margin-bottom: 15px;
+}
+
+.sub-menu-item ul li:last-child {
+  margin-bottom: 0;
+}
+
+.sub-menu-list .link-user-menu {
   line-height: 36px;
 }
 
 /*****************************************************************/
 
 .promo .container {
-  position: relative;
+  padding-bottom: 105px;
 
-  background-image: linear-gradient(to bottom, #f7e296 75px, #fff 75px);
+  background-image: linear-gradient(to bottom, #f7e296 112px, #fff 112px);
+}
+
+.promo-slider {
+  position: relative;
 }
 
 .promo .promo-item {
@@ -273,32 +420,29 @@ input[type="search"] {
 .promo-column {
   display: flex;
   width: 600px;
-  min-height: 486px;
-
-  outline: 1px solid blue;
+  /*  min-height: 486px;  */
 }
 
 .promo-column:first-child img {
   margin: auto;
-  margin-top: 0;
 
   outline: 1px solid red;
 }
 
-.promo .promo-column:last-child {
+.promo-column:last-child {
   position: relative;
 
-  display: flex;
   flex-direction: column;
   align-items: flex-start;
   width: 500px;
+  padding-top: 38px;
+  /* 38px от границы секции до верха псевдо-рамки*/
 }
 
 .promo-item-title {
   position: absolute;
-  right: 0;
+  right: -14px;
   top: -10px;
-  z-index: -1;
 
   margin: 0;
 
@@ -307,21 +451,27 @@ input[type="search"] {
   line-height: 180px;
   font-family: "Gilroy", "Arial", sans-serif;
   letter-spacing: 0.01em;
-  /*      color: #fff;*/
-  outline: 1px solid black;
+  color: #fff;
 }
 
 .section-title {
+  position: relative;
+  z-index: 1;
+
   margin: 0;
+  margin-bottom: 50px;
 
   font-weight: 800;
   font-size: 47px;
   line-height: 48px;
   font-family: "Gilroy", "Arial", sans-serif;
   letter-spacing: 0.01em;
+  color: #000;
 }
 
 .promo .section-title {
+  margin-bottom: 30px;
+
   line-height: 56px;
 }
 
@@ -329,7 +479,7 @@ input[type="search"] {
   display: block;
   width: 100px;
   height: 7px;
-  margin-bottom: 46px;
+  margin-bottom: 50px;
 
   background-color: #000;
 
@@ -337,36 +487,33 @@ input[type="search"] {
 }
 
 .promo .section-title::before {
+  margin-bottom: 35px;
+
   background-color: #fff;
 }
 
 .content {
   margin: 0;
 
-  font: inherit;
   color: #464646;
 }
 
 .promo .content {
-  width: 100%;
-  margin-top: 30px;
+  margin-bottom: 45px;
 }
 
 .promo .btn {
-  margin-top: 60px;
-  padding: 0 44px;
+  margin-bottom: 50px;
 }
 
 .product-properties {
   width: 460px;
-  margin-top: 65px;
-  margin-bottom: 15px;
 }
 
-.cproduct-properties .value {
+.product-properties .value {
+  font-weight: 300;
   font-size: 36px;
   line-height: 48px;
-  font-weight: 300;
   font-family: "Gilroy", "Arial", sans-serif;
   letter-spacing: 0.01em;
   color: #000;
@@ -396,8 +543,8 @@ input[type="search"] {
 
 .promo-active {
   position: absolute;
-  bottom: 130px;
-  right: 140px;
+  bottom: 125px;
+  right: 50px;
 }
 
 .promo-active label {
@@ -427,8 +574,8 @@ input[type="search"] {
 /****************************************************************************/
 
 .popular-product {
-  margin-top: 215px;
-  padding-bottom: 80px;
+  margin-top: 200px;
+  padding-bottom: 85px;
 }
 
 .popular-product-list {
@@ -443,14 +590,22 @@ input[type="search"] {
 }
 
 .popular-product-title {
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 
-  letter-spacing: 0.01em;
-  line-height: 24px;
-  /*Почему высота строки не наследуется от класса "link" ?*/
+  font: inherit;
 }
 
-.popular-product-image {
+.popular-product-title:active {
+  opacity: 0.3;
+}
+
+.popular-product .link {
+  letter-spacing: 0.01em;
+  text-transform: inherit;
+}
+
+.popular-product-item::before {
   position: absolute;
   bottom: 85px;
   left: 0px;
@@ -460,33 +615,45 @@ input[type="search"] {
 
   background: #f7e296 no-repeat center;
 
-  outline: 1px solid blue;
+  content: "";
 }
 
-.popular-product-item:nth-child(1) .popular-product-image {
+.popular-product-item:nth-child(1)::before {
   background-image: url("../img/popular-1.svg");
 }
 
-.popular-product-item:nth-child(2) .popular-product-image {
+.popular-product-item:nth-child(2)::before {
   background-image: url("../img/popular-2.svg");
   background-position: bottom;
 }
 
-.popular-product-item:nth-child(3) .popular-product-image {
+.popular-product-item:nth-child(3)::before {
   background-image: url("../img/popular-3.svg");
 }
 
-.popular-product-item:nth-child(4) .popular-product-image {
+.popular-product-item:nth-child(4)::before {
   background-image: url("../img/popular-4.svg");
 }
 
-.popular-product-item:nth-child(5) .popular-product-image {
+.popular-product-item:nth-child(5)::before {
   background-image: url("../img/popular-5.svg");
 }
 
-.popular-product-item:nth-child(6) .popular-product-image {
+.popular-product-item:nth-child(6)::before {
   background-image: url("../img/popular-6.svg");
 }
+
+.popular-product-item:hover::before {
+  background-color: #f0c52e;
+
+  cursor: pointer;
+}
+
+/*
+.popular-product-item:active::before {
+ Как изменить прозрачность свг фигуры, определённой бэкграундом через псевдо элемент?
+}
+*/
 
 /************************************************************************/
 
@@ -511,40 +678,36 @@ input[type="search"] {
   flex-direction: column;
   width: 295px;
   margin-right: 115px;
-  padding: 60px 0;
+  padding: 80px 0;
 
   border-right: 7px solid #000;
 }
 
-.services-active .content {
+.services-active p {
+  margin: 0;
   margin-bottom: 25px;
 }
 
-.services-active .content:last-child {
+.services-active p:last-child {
   margin-bottom: 0;
 }
 
-.services-active label {
-  display: inline-block;
+.services-active .btn {
   width: 160px;
-  padding: 13px 0;
-
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 24px;
-  font-family: "Gilroy", "Arial", sans-serif;
-  letter-spacing: 0.2em;
-  text-transform: uppercase;
-  text-align: center;
-
-  outline: 1px solid green;
 }
 
-#services-slide1:checked ~ .services-active .content:nth-child(1),
-#services-slide2:checked ~ .services-active .content:nth-child(2),
-#services-slide3:checked ~ .services-active .content:nth-child(3) {
+#services-slide1:checked ~ .services-active p:nth-child(1) .btn,
+#services-slide2:checked ~ .services-active p:nth-child(2) .btn,
+#services-slide3:checked ~ .services-active p:nth-child(3) .btn {
   color: #f7e184;
 
+  background-image: none;
+  background-color: #000;
+}
+
+#services-slide1:checked ~ .services-active p:nth-child(1),
+#services-slide2:checked ~ .services-active p:nth-child(2),
+#services-slide3:checked ~ .services-active p:nth-child(3) {
   background-color: #000;
 }
 
@@ -574,7 +737,7 @@ input[type="search"] {
 }
 
 .services-item:nth-child(2)::after {
-  bottom: 0px;
+  bottom: 0;
   right: -250px;
 
   width: 171px;
@@ -592,7 +755,6 @@ input[type="search"] {
 
   background-image: url("../img/credit.svg");
 }
-
 
 .services .section-title {
   margin-bottom: 40px;
@@ -643,14 +805,8 @@ input[type="search"] {
 
 /*********************************************************************************************/
 
-.container2 {
-  width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-
+.index .container {
   display: flex;
-
-  outline: 1px solid red;
 }
 
 /*************************************************************************************************/
@@ -658,12 +814,12 @@ input[type="search"] {
 .about-us {
   width: 560px;
   margin-right: 40px;
-  padding-bottom: 95px;
+  padding-bottom: 90px;
 }
 
-.about-us .section-title,
-.contacts .section-title {
-  margin-bottom: 55px;
+.about-us .section-title::before,
+.contacts .section-title::before {
+  width: 70px;
 }
 
 .about-us .content,
@@ -673,16 +829,18 @@ input[type="search"] {
 }
 
 .about-us .content:nth-of-type(2) {
-  margin-bottom: 85px;
+  margin-bottom: 52px;
 }
 
 .about-us .companies-list {
   margin-bottom: 80px;
 
   list-style: circle;
+  /*  Как точки перенести за границу контейнера?*/
 }
 
 .companies-item {
+  padding: 0;
   padding-left: 35px;
 }
 
@@ -697,10 +855,14 @@ input[type="search"] {
   font-family: "Gilroy", "Arial", sans-serif;
 }
 
+.about-us .btn,
+.contacts .btn {
+  width: 260px;
+}
+
 /********************************************************************************/
 
 .contacts img {
-  /*???????*/
   width: 560px;
   height: 222px;
 }
@@ -836,8 +998,8 @@ input[type="search"] {
 
 .contact-form p:nth-child(3) {
   width: 760px;
-  margin-right: 0;
   margin-top: 40px;
+  margin-right: 0;
   margin-bottom: 55px;
 }
 
@@ -858,24 +1020,41 @@ input[type="search"] {
   margin-top: 10px;
   padding: 15px 20px;
 
-  border: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+
   background-color: #f2f2f2;
+  border: none;
+  opacity: 0.5;
 }
 
 .contact-form input[type="text"]:hover,
 .contact-form input[type="email"]:hover,
 .contact-form textarea:hover {
   background-color: #eaeaea;
+  opacity: 0.8;
 }
 
 .contact-form input[type="text"]:focus,
 .contact-form input[type="email"]:focus,
 .contact-form textarea:focus {
+  background-color: #fff;
   outline: 4px solid #f7e296;
+  opacity: 1;
 }
 
 .contact-form textarea {
   min-height: 155px;
+}
+
+.modal-write-us .btn {
+  width: 200px;
+  background-color: inherit;
+}
+
+.modal-write-us .btn:hover {
+  background-color: #f0c52e;
 }
 
 .modal-close {
@@ -888,10 +1067,10 @@ input[type="search"] {
 
   font-size: 0;
 
-  outline: none;
-  border: none;
   background: url("../img/modal-close.svg");
   background-size: contain;
+  border: none;
+  outline: none;
   opacity: 0.5;
 
   cursor: pointer;
@@ -1015,11 +1194,13 @@ input[type="search"] {
 .filter-form {
   width: 200px;
   margin-right: 68px;
-  /*      margin-left: auto;*/
+/*        margin-left: auto;*/
 }
 
 .filter-form fieldset {
+  margin: 0;
   margin-bottom: 40px;
+  padding: 0;
 
   border: none;
 }
