--- a/css/style.css
+++ b/css/style.css
@@ -47,13 +47,17 @@
   src: local("Gilroyextrabold"),
   url("../fonts/gilroyextrabold.woff2") format("woff2"),
   url("../fonts/gilroyextrabold.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: "opensans";
-  src: local("opensans"),
-  url("../fonts/opensans.woff2") format("woff2"),
-  url("../fonts/opensans.woff") format("woff");
+  font-family: "gilroyextrabold";
+  src: local("Gilroyextrabold"),
+  url("../fonts/gilroyextrabold.woff2") format("woff2"),
+  url("../fonts/gilroyextrabold.woff") format("woff");
+  font-weight: 800;
+  font-style: normal;
 }
 
 body {
@@ -91,6 +95,11 @@ body {
   clip: rect(0 0 0 0);
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 [class$="-list"] {
   margin: 0;
   padding: 0;
@@ -125,7 +134,6 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   color: #000;
-
   cursor: pointer;
 }
 
@@ -202,7 +210,6 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   color: #000;
-
   cursor: pointer;
 }
 
@@ -263,7 +270,6 @@ input[type="search"]:focus {
 
   background-color: #f7e296;
   border: 2px solid #f7e296;
-
   cursor: pointer;
 }
 
@@ -561,10 +567,9 @@ input[type="search"]:focus + .btn-search {
   width: 15px;
   height: 15px;
 
-  cursor: pointer;
-
   background: url(../img/slider-button-off.svg) no-repeat;
   background-size: contain;
+  cursor: pointer;
 }
 
 #promo-slide1:checked ~ .promo-active label:nth-child(1),
@@ -648,7 +653,6 @@ input[type="search"]:focus + .btn-search {
 
 .popular-product-item:hover::before {
   background-color: #f0c52e;
-
   cursor: pointer;
 }
 
@@ -952,7 +956,6 @@ input[type="search"]:focus + .btn-search {
   background-image: url(../img/facebook.svg);
   border-radius: 50%;
   opacity: 0.3;
-
   cursor: pointer;
 }
 
@@ -1032,7 +1035,7 @@ input[type="search"]:focus + .btn-search {
   width: 100%;
   margin-top: 10px;
   padding: 15px 20px;
-  
+
   font: inherit;
   font-weight: 500;
   font-size: 14px;
@@ -1064,6 +1067,7 @@ input[type="search"]:focus + .btn-search {
 
 .modal-write-us .btn {
   width: 200px;
+
   background-color: inherit;
 }
 
@@ -1086,7 +1090,6 @@ input[type="search"]:focus + .btn-search {
   border: none;
   outline: none;
   opacity: 0.5;
-
   cursor: pointer;
 }
 
@@ -1159,7 +1162,6 @@ input[type="search"]:focus + .btn-search {
   border: 2px solid #000;
   border-bottom-color: transparent;
   border-left-color: transparent;
-
   opacity: 0.3;
 
   transform: rotate(45deg);
@@ -1194,7 +1196,6 @@ input[type="search"]:focus + .btn-search {
 
 .catalog-title {
   margin-top: 0;
-  /*  margin-top: 25px;*/
   margin-bottom: 85px;
 
   font-weight: 800;
@@ -1210,7 +1211,13 @@ input[type="search"]:focus + .btn-search {
 .filter-form {
   width: 200px;
   margin-right: 68px;
-  /*          margin-left: auto;*/
+
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 40px;
+  font-family: "Open sans", "Arial", sans-serif;
+  letter-spacing: 0.01em;
+  color: #000;
 }
 
 .filter-form fieldset {
@@ -1238,15 +1245,68 @@ input[type="search"]:focus + .btn-search {
   content: "";
 }
 
-.filter-form p {
-  margin: 0;
+.range-controls {
+  position: relative;
+
+  margin-bottom: 15px;
 }
 
-.filter-form .price {
+.scale {
+  margin-top: 35px;
+  height: 2px;
+
+  background-color: #dbdbdb;
+}
+
+.bar {
+  width: 110px;
+  height: 2px;
+
+  background-color: #91c92f;
+}
+
+.range-toggle {
+  position: absolute;
+  top: -10px;
+
+  width: 4px;
+  height: 4px;
+
+  background-color: #818181;
+  border: 9px solid #fff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.range-toggle-min {
+  left: -5px;
+}
+
+.range-toggle-max {
+  left: 110px;
+}
+
+.range-filter label {
+  font: inherit;
+  line-height: 24px;
+  letter-spacing: 0;
+
+  opacity: 0.2;
+}
+
+.filter-form [class$="-price"] {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  width: 70px;
+  width: 60px;
+  margin-left: 5px;
+  padding: 0;
+
+  font: inherit;
+  line-height: 24px;
+  color: #000;
+ 
+  border: none;
 }
 
 .color-filter-list label,
@@ -1257,6 +1317,8 @@ input[type="search"]:focus + .btn-search {
 
   font-size: 14px;
   line-height: 40px;
+
+  cursor: pointer;
 }
 
 .color-filter-list label::before {
@@ -1267,6 +1329,7 @@ input[type="search"]:focus + .btn-search {
   display: block;
   width: 23px;
   height: 23px;
+
   background-image: url("../img/checkbox-off.svg");
 
   content: "";
@@ -1284,6 +1347,7 @@ input[type="search"]:focus + .btn-search {
   display: block;
   width: 25px;
   height: 25px;
+
   background-image: url("../img/radio-off.svg");
 
   content: "";
@@ -1295,6 +1359,12 @@ input[type="search"]:focus + .btn-search {
 
 .filter-form .btn {
   width: 100%;
+
+  background-color: inherit;
+}
+
+.filter-form .btn:hover {
+  background-color: #f0c52e;
 }
 
 /**********************************************************************************/
@@ -1391,6 +1461,10 @@ input[type="search"]:focus + .btn-search {
 
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  /*  align-content: center;*/
+  align-items: center;
+
   width: 360px;
   margin-right: 40px;
   margin-bottom: 50px;
@@ -1402,11 +1476,19 @@ input[type="search"]:focus + .btn-search {
 
 .catalog-item-title {
   order: 2;
+  width: 260px;
   margin: 0;
 }
 
 .catalog-item-price {
   order: 3;
+
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  letter-spacing: 0.01em;
+  color: #464646;
 }
 
 .catalog-item-title .link {
@@ -1416,10 +1498,13 @@ input[type="search"]:focus + .btn-search {
 
 .catalog-item-image {
   order: 1;
+  margin: 0;
+
+  outline: 1px solid red;
 }
 
 .catalog-item > a {
-/*    display: none;*/
+  /*    display: none;*/
 }
 
 .into-the-backet,
@@ -1435,13 +1520,39 @@ input[type="search"]:focus + .btn-search {
 
 .product-comparison {
   top: 60%;
-  
+
   outline: 1px solid red;
 }
 
 .mark-new {
-  display: none;
+  position: absolute;
+  top: 13%;
+  right: 8%;
+
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  letter-spacing: 0.5em;
+  text-transform: uppercase;
+  color: #d9d9d9;
+  /*  opacity: 0.2;*/
 }
+
+.mark-new::before {
+  position: absolute;
+  top: -21px;
+  right: 0;
+  display: block;
+  width: 57px;
+  height: 57px;
+
+  border: 3px solid #d9d9d9;
+  border-radius: 50%;
+  /*  opacity: 0.5;*/
+  content: "";
+}
+
 
 
 
